Add contact form

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -21,8 +21,7 @@
     {% include "../partials/footer.njk" %}
   </main>
 
-  {# <script src="/js/polyfills.js"></script>
-  <script src="/js/main.js"></script> #}
+  <script src="/index.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54085200-2"></script>
