--- a/index.njk
+++ b/index.njk
@@ -26,3 +26,50 @@ title: Home
   {% include "./_includes/partials/postslist.njk" %}
   </div>
 </section>
+
+<section>
+  <h1>Let's work together!</h1>
+  <p>Please fill in the form below telling me about your project idea:</p>
+  <div id="contact-form-response"></div>
+
+  <div id="contact-form-error" class="alert bg-red-100 border border-red-400 text-red-700 px-4 py-3 mb-4 rounded relative hidden" role="alert">
+    <strong class="font-bold">An error has occurred.</strong>
+    <span class="block sm:inline">An error has occurred while sending the message. Please try again.</span>
+    <span class="alert-close absolute top-0 bottom-0 right-0 px-4 py-3">
+      <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+    </span>
+  </div>
+
+  <div id="contact-form-success" class="alert bg-green-100 border border-green-400 text-green-700 px-4 py-3 mb-4 rounded relative hidden" role="alert">
+    <strong class="font-bold">Your message has been submitted!</strong>
+    <span class="block sm:inline">Thanks for the message. I'll be in touch shortly.</span>
+    <span class="alert-close absolute top-0 bottom-0 right-0 px-4 py-3">
+      <svg class="fill-current h-6 w-6 text-green-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+    </span>
+  </div>
+
+  <form id="contact-form" action="https://7k9dw37392.execute-api.eu-west-1.amazonaws.com/dev/website-mailer" method="post" class="clearfix">
+    <label for="name">Full name</label>
+    <input
+      id="name"
+      name="name"
+      type="text"
+      class="w-full px-3 py-2 border rounded mb-3"
+      placeholder="Your full name"
+      required>
+
+    <label for="email">Email</label>
+    <input
+      id="email"
+      name="reply_to"
+      type="email"
+      class="w-full px-3 py-2 border rounded mb-3"
+      placeholder="example@mail.com"
+      required>
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" class="w-full px-3 py-2 border rounded mb-3" rows="5" required></textarea>
+
+    <button type="submit" class="bg-teal-500 text-white rounded px-3 py-1 float-right">Send</button>
+  </form>
+</section>
