Add contact form and work section

--- a/work.njk
+++ b/work.njk
@@ -23,6 +23,24 @@ title: Work
 <div class="cards mt-4">
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
+      <p class="font-medium text-black">Mini Mission School</p>
+      <div class="text-sm">
+        <p>
+          A website for the Mini Mission Arabic and Islamic education school.
+          The client wanted a simple and "playful" look and feel for the website
+          with a registration feature.
+        </p>
+      </div>
+    </div>
+
+    <a href="https://minimission.co.uk/" class="card--action">
+      <p>More info</p>
+      {% include "./_includes/partials/chevron-right.njk" %}
+    </a>
+  </div>
+
+  <div class="card card--no-shadow">
+    <div class="py-3 px-4">
       <p class="font-medium text-black">Multi-carrier integration platform</p>
       <div class="text-sm">
         <p>
@@ -38,7 +56,6 @@ title: Work
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
-
   </div>
 
   <div class="card card--no-shadow">
