--- a/index.njk
+++ b/index.njk
@@ -70,6 +70,9 @@ title: Home
     <label for="message">Message</label>
     <textarea id="message" name="message" class="w-full px-3 py-2 border rounded mb-3" rows="5" required></textarea>
 
-    <button type="submit" class="bg-teal-500 text-white rounded px-3 py-1 float-right">Send</button>
+    <button type="submit" class="flex items-center bg-teal-500 text-white rounded px-3 py-1 float-right">
+      <span>Send</span>
+      <span class="spinner ml-2 hidden"></span>
+    </button>
   </form>
 </section>
