--- a/tailwind.build.css
+++ b/tailwind.build.css
@@ -95,6 +95,25 @@ section > h1 {
 }
 
 /*************************
+ *         Spinner
+ *************************/
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  border-top-color: #000;
+  animation: spinner 0.6s linear infinite;
+}
+
+/*************************
  *         Card
  *************************/
 
