Add post, favicon + performance refactor

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,6 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ossama Edbali | {{ title }}</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png?v=1' | url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png?v=1' | url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png?v=1' | url }}">
+
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/css/styles.min.css' | url }}">
   {# <%- blocks.css %> #}
