--- a/index.njk
+++ b/index.njk
@@ -6,12 +6,12 @@ title: Home
 <p>
   Hi there, thanks for stopping by!
   I'm Ossama Edbali, software developer at <a href="https://www.ucas.com/">UCAS</a>,
-  currently based in Cheltenham, UK.
+  currently based in Birmingham, UK.
 </p>
 
 <p>
-  I design and build bespoke web applications.
-  <a href="mailto:ossedb@gmail.com">Get in touch</a> to start something great!
+  I design and build bespoke web applications and websites.
+  <a href="#work-together">Get in touch</a> to start something great!
   For more insights on what I do check out the <a href="/work">work</a> page.
 </p>
 
@@ -22,12 +22,12 @@ title: Home
 
 <section>
   <h1>Recent posts</h1>
-  {% set postslist = collections.post | head(-3) %}
+  {% set postslist = collections.post | head(4) %}
   {% include "./_includes/partials/postslist.njk" %}
   </div>
 </section>
 
-<section>
+<section id="work-together">
   <h1>Let's work together!</h1>
   <p>Please fill in the form below telling me about your project idea:</p>
   <div id="contact-form-response"></div>
