--- a/work.njk
+++ b/work.njk
@@ -6,14 +6,18 @@ title: Work
 <h1>Work</h1>
 
 <p>
-  I currently work at <a href="https://www.ucas.com/">UCAS</a> mainly focussing on the
-  <a href="https://digital.ucas.com/search">search tool</a>
-  which lets you search for University courses with a variety of filters.
+  I currently work at <a href="https://www.ucas.com/">UCAS</a> as part of the
+  <a href="https://digital.ucas.com/search">search and explore</a> team.
 </p>
 
 <p>
-  Throughout the years I worked at several web agencies, acquiring
-  experience in both backend and frontend web development.
+  Throughout the years I worked in several fields ranging from education to web agencies,
+  acquiring experience in both backend and frontend web development.
+</p>
+
+<p>
+  I also work as a part-time freelancer specialising in websites, web app development,
+  and website/web app performance.
 </p>
 
 <p>
@@ -23,7 +27,28 @@ title: Work
 <div class="cards mt-4">
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">Mini Mission School</p>
+      <h2 class="flex items-center justify-between font-medium text-black">
+        <span>House of Thobes</span>
+        <span class="text-xs font-normal bg-blue-500 text-white px-1 rounded">In progress</span>
+      </h2>
+      <div class="text-sm">
+        <p>
+          A website for an online clothing shop using
+          a frontend-only approach with AWS serverless
+          architecture for processing orders.
+        </p>
+      </div>
+    </div>
+
+    <a href="https://houseofthobes.co.uk/" class="card--action">
+      <p>More info</p>
+      {% include "./_includes/partials/chevron-right.njk" %}
+    </a>
+  </div>
+
+  <div class="card card--no-shadow">
+    <div class="py-3 px-4">
+      <h2 class="font-medium text-black">Mini Mission School</h2>
       <div class="text-sm">
         <p>
           A website for the Mini Mission Arabic and Islamic education school.
@@ -41,7 +66,7 @@ title: Work
 
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">Multi-carrier integration platform</p>
+      <h2 class="font-medium text-black">Multi-carrier integration platform</h2>
       <div class="text-sm">
         <p>
           As a intern web developer I worked on the initial
@@ -60,7 +85,7 @@ title: Work
 
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">CC Tutor</p>
+      <h2 class="font-medium text-black">CC Tutor</h2>
       <div class="text-sm">
         <p>
           A compilation process visualisation platform
@@ -81,7 +106,7 @@ title: Work
 
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">Code First: Girls</p>
+      <h2 class="font-medium text-black">Code First: Girls</h2>
       <div class="text-sm">
         <p>
           As part of the "Code First: Girls" courses
@@ -101,7 +126,7 @@ title: Work
 
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">Kamil</p>
+      <h2 class="font-medium text-black">Kamil</h2>
       <div class="text-sm">
         <p>
           A dependency-free JavaScript autocomplete library.
@@ -121,7 +146,7 @@ title: Work
 
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">paginator.js</p>
+      <h2 class="font-medium text-black">paginator.js</h2>
       <div class="text-sm">
         <p>
           A small and dependency-free client-side pagination library for modern browsers.
@@ -138,7 +163,7 @@ title: Work
 
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
-      <p class="font-medium text-black">Sakin</p>
+      <h2 class="font-medium text-black">Sakin</h2>
       <div class="text-sm">
         <p>
           A simple static site generator for blogs and personal websites
