--- a/_includes/partials/postslist.njk
+++ b/_includes/partials/postslist.njk
@@ -7,7 +7,7 @@
     <div class="px-6 py-4">
       <p class="text-gray-800 text-lg">{{ post.data.title }}</p>
       <p class="text-gray-600 text-xs">
-        {{ post.date | relativeDate }}
+        {{ post.date | formattedDate }}
       </p>
     </div>
   </a>
