Update work page

--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ title: Home
 
 <p>
   Hi there, thanks for stopping by!
-  I'm Ossama Edbali, software developer at <a href="https://www.ebi.ac.uk/">The European Bioinformatics Institute (EMBL-EBI)</a>,
+  I'm Ossama Edbali, software developer at <a href="https://www.ebi.ac.uk/" target="_blank">The European Bioinformatics Institute (EMBL-EBI)</a>,
   currently based in Birmingham, UK.
 </p>
 
