--- a/work.njk
+++ b/work.njk
@@ -6,8 +6,8 @@ title: Work
 <h1>Work</h1>
 
 <p>
-  I currently work at <a href="https://www.ucas.com/">UCAS</a> as part of the
-  <a href="https://digital.ucas.com/search">search and explore</a> team.
+  I currently work at <a href="https://www.ebi.ac.uk/" target="_blank">The European Bioinformatics Institute (EMBL-EBI)</a>
+  on the <a href="https://www.covid19dataportal.org/" target="_blank">COVID-19 Data Portal</a>.
 </p>
 
 <p>
@@ -28,8 +28,7 @@ title: Work
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
       <h2 class="flex items-center justify-between font-medium text-black">
-        <span>House of Thobes</span>
-        <span class="text-xs font-normal bg-blue-500 text-white px-1 rounded">In progress</span>
+        House of Thobes
       </h2>
       <div class="text-sm">
         <p>
@@ -40,7 +39,7 @@ title: Work
       </div>
     </div>
 
-    <a href="https://houseofthobes.co.uk/" class="card--action">
+    <a href="https://houseofthobes.co.uk/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -58,7 +57,7 @@ title: Work
       </div>
     </div>
 
-    <a href="https://minimission.co.uk/" class="card--action">
+    <a href="https://minimission.co.uk/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -77,7 +76,7 @@ title: Work
       </div>
     </div>
 
-    <a href="https://www.codemakers.co.uk/projects/shipmate/" class="card--action">
+    <a href="https://www.codemakers.co.uk/projects/shipmate/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -97,7 +96,7 @@ title: Work
       </div>
     </div>
 
-    <a href="https://cc-tutor.herokuapp.com/" class="card--action">
+    <a href="https://cc-tutor.herokuapp.com/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -117,7 +116,7 @@ title: Work
       </div>
     </div>
 
-    <a href="https://www.codefirstgirls.org.uk/" class="card--action">
+    <a href="https://www.codefirstgirls.org.uk/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -137,7 +136,7 @@ title: Work
       </div>
     </div>
 
-    <a href="http://oss6.github.io/kamil/" class="card--action">
+    <a href="http://oss6.github.io/kamil/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -154,7 +153,7 @@ title: Work
       </div>
     </div>
 
-    <a href="http://oss6.github.io/paginator.js/" class="card--action">
+    <a href="http://oss6.github.io/paginator.js/" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
@@ -172,7 +171,7 @@ title: Work
       </div>
     </div>
 
-    <a href="http://oss6.github.io/sakin" class="card--action">
+    <a href="http://oss6.github.io/sakin" target="_blank" class="card--action">
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
