add vf-core-service-discovery post

--- a/work.njk
+++ b/work.njk
@@ -28,6 +28,45 @@ title: Work
   <div class="card card--no-shadow">
     <div class="py-3 px-4">
       <h2 class="flex items-center justify-between font-medium text-black">
+        eslint-plugin-ng-extra
+      </h2>
+      <div class="text-sm">
+        <p>
+          ESLint plugin for Angular. This plugin contains
+          checks that are not present in <a href="https://github.com/angular-eslint/angular-eslint" target="_blank">angular-eslint</a>
+        </p>
+      </div>
+    </div>
+
+    <a href="https://github.com/oss6/eslint-plugin-ng-extra" target="_blank" class="card--action">
+      <p>More info</p>
+      {% include "./_includes/partials/chevron-right.njk" %}
+    </a>
+  </div>
+
+  <div class="card card--no-shadow">
+    <div class="py-3 px-4">
+      <h2 class="flex items-center justify-between font-medium text-black">
+        vf-core-service-discovery
+      </h2>
+      <div class="text-sm">
+        <p>
+          Service discovery tool for the <a href="https://github.com/visual-framework/vf-core" target="_blank">vf-core</a>,
+          which is a (primarily CSS) framework that targets needs of life science websites and services
+          (e.g. <a href="https://www.embl.org/" target="_blank">European Molecular Biology Laboratory</a>).
+        </p>
+      </div>
+    </div>
+
+    <a href="https://github.com/oss6/vf-core-service-discovery" target="_blank" class="card--action">
+      <p>More info</p>
+      {% include "./_includes/partials/chevron-right.njk" %}
+    </a>
+  </div>
+
+  <div class="card card--no-shadow">
+    <div class="py-3 px-4">
+      <h2 class="flex items-center justify-between font-medium text-black">
         House of Thobes
       </h2>
       <div class="text-sm">
@@ -140,41 +179,5 @@ title: Work
       <p>More info</p>
       {% include "./_includes/partials/chevron-right.njk" %}
     </a>
-
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">paginator.js</h2>
-      <div class="text-sm">
-        <p>
-          A small and dependency-free client-side pagination library for modern browsers.
-        </p>
-      </div>
-    </div>
-
-    <a href="http://oss6.github.io/paginator.js/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">Sakin</h2>
-      <div class="text-sm">
-        <p>
-          A simple static site generator for blogs and personal websites
-          developed in Node JS.
-        </p>
-      </div>
-    </div>
-
-    <a href="http://oss6.github.io/sakin" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-
   </div>
 </div>
