--- a/_includes/partials/postslist.njk
+++ b/_includes/partials/postslist.njk
@@ -3,7 +3,23 @@
   <a
     href="{{ post.url | url }}"
     class="card card--shadow no-underline text-gray-800 bg-white">
-    <img class="w-full" src="/images/blog/{{ post.fileSlug }}.jpg" alt="{{ post.data.title }}">
+    <div style="position: relative;">
+      <img class="w-full" src="/images/blog/{{ post.fileSlug }}.jpg" alt="{{ post.data.title }}">
+      {% if post.data.attribution %}
+      <p style="
+        position: absolute;
+        color: #fff;
+        background-color: rgba(0, 0, 0, 0.7);
+        bottom: 0;
+        left: 0;
+        right: 0;
+        font-size: 0.5rem;
+        padding: 0.4rem;"
+      >
+        Image: {{ post.data.attribution }}
+      </p>
+      {% endif %}
+    </div>
     <div class="px-6 py-4">
       <p class="text-gray-800 text-lg">{{ post.data.title }}</p>
       <p class="text-gray-600 text-xs">
