--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,13 +1,13 @@
-<footer class="flex my-8">
-  <a href="https://github.com/oss6" class="mr-4 no-underline">
+<footer class="global-footer flex my-8">
+  <a href="https://github.com/oss6" target="_blank" class="mr-4 no-underline">
     {% include "./github-logo.njk" %}
   </a>
 
-  <a href="https://twitter.com/ossedb" class="mr-4 no-underline">
+  <a href="https://twitter.com/ossedb" target="_blank" class="mr-4 no-underline">
     {% include "./twitter-logo.njk" %}
   </a>
 
-  <a href="https://www.instagram.com/ossamaedbali" class="no-underline">
+  <a href="https://www.instagram.com/ossamaedbali" target="_blank" class="no-underline">
     {% include "./instagram-logo.njk" %}
   </a>
 </footer>
