--- a/work.njk
+++ b/work.njk
@@ -3,181 +3,185 @@ layout: layouts/base.njk
 title: Work
 ---
 
-<h1>Work</h1>
-
-<p>
-  I currently work at <a href="https://www.ebi.ac.uk/" target="_blank">The European Bioinformatics Institute (EMBL-EBI)</a>
-  on the <a href="https://www.covid19dataportal.org/" target="_blank">COVID-19 Data Portal</a>.
-</p>
-
-<p>
-  Throughout the years I worked in several fields ranging from education to web agencies,
-  acquiring experience in both backend and frontend web development.
-</p>
-
-<p>
-  I also work as a part-time freelancer specialising in websites, web app development,
-  and website/web app performance.
-</p>
-
-<p>
-  Following are some of the projects I worked on:
-</p>
-
-<div class="cards mt-4">
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="flex items-center justify-between font-medium text-black">
-        eslint-plugin-ng-extra
-      </h2>
-      <div class="text-sm">
-        <p>
-          ESLint plugin for Angular. This plugin contains
-          checks that are not present in <a href="https://github.com/angular-eslint/angular-eslint" target="_blank">angular-eslint</a>
-        </p>
-      </div>
-    </div>
-
-    <a href="https://github.com/oss6/eslint-plugin-ng-extra" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
+<main role="main">
+  <div class="content-header">
+    <h1 class="content-header__title">Work</h1>
   </div>
 
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="flex items-center justify-between font-medium text-black">
-        vf-core-service-discovery
-      </h2>
-      <div class="text-sm">
-        <p>
-          Service discovery tool for the <a href="https://github.com/visual-framework/vf-core" target="_blank">vf-core</a>,
-          which is a (primarily CSS) framework that targets needs of life science websites and services
-          (e.g. <a href="https://www.embl.org/" target="_blank">European Molecular Biology Laboratory</a>).
-        </p>
+  <p>
+    I currently work at <a class="link" href="https://www.ebi.ac.uk/" target="_blank">The European Bioinformatics Institute</a>
+    on the <a class="link" href="https://www.covid19dataportal.org/" target="_blank">COVID-19 Data Portal</a>.
+  </p>
+
+  <p>
+    Throughout the years I worked in several fields ranging from education to web agencies,
+    acquiring experience in both backend and frontend web development.
+  </p>
+
+  <p>
+    I also work as a part-time freelancer specialising in websites, web app development,
+    and website/web app performance.
+  </p>
+
+  <p>
+    Following are some of the projects I worked on:
+  </p>
+
+  <div class="cards mt-4">
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="flex items-center justify-between font-medium text-black">
+          eslint-plugin-ng-extra
+        </h2>
+        <div class="text-sm">
+          <p>
+            ESLint plugin for Angular. This plugin contains
+            checks that are not present in <a class="link" href="https://github.com/angular-eslint/angular-eslint" target="_blank">angular-eslint</a>
+          </p>
+        </div>
       </div>
+
+      <a href="https://github.com/oss6/eslint-plugin-ng-extra" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
     </div>
 
-    <a href="https://github.com/oss6/vf-core-service-discovery" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="flex items-center justify-between font-medium text-black">
-        House of Thobes
-      </h2>
-      <div class="text-sm">
-        <p>
-          A website for an online clothing shop using
-          a frontend-only approach with AWS serverless
-          architecture for processing orders.
-        </p>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="flex items-center justify-between font-medium text-black">
+          vf-core-service-discovery
+        </h2>
+        <div class="text-sm">
+          <p>
+            Service discovery tool for the <a href="https://github.com/visual-framework/vf-core" target="_blank">vf-core</a>,
+            which is a (primarily CSS) framework that targets needs of life science websites and services
+            (e.g. <a href="https://www.embl.org/" target="_blank">European Molecular Biology Laboratory</a>).
+          </p>
+        </div>
       </div>
+
+      <a href="https://github.com/oss6/vf-core-service-discovery" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
     </div>
 
-    <a href="https://houseofthobes.co.uk/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">Mini Mission School</h2>
-      <div class="text-sm">
-        <p>
-          A website for the Mini Mission Arabic and Islamic education school.
-          The client wanted a simple and "playful" look and feel for the website
-          with a registration feature.
-        </p>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="flex items-center justify-between font-medium text-black">
+          House of Thobes
+        </h2>
+        <div class="text-sm">
+          <p>
+            A website for an online clothing shop using
+            a frontend-only approach with AWS serverless
+            architecture for processing orders.
+          </p>
+        </div>
       </div>
+
+      <a href="https://houseofthobes.co.uk/" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
     </div>
 
-    <a href="https://minimission.co.uk/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">Multi-carrier integration platform</h2>
-      <div class="text-sm">
-        <p>
-          As a intern web developer I worked on the initial
-          API (Laravel PHP). The work consisted in providing a unified
-          API for different carriers, therefore getting in
-          touch with their respective development teams.
-        </p>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="font-medium text-black">Mini Mission School</h2>
+        <div class="text-sm">
+          <p>
+            A website for the Mini Mission Arabic and Islamic education school.
+            The client wanted a simple and "playful" look and feel for the website
+            with a registration feature.
+          </p>
+        </div>
       </div>
+
+      <a href="https://minimission.co.uk/" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
     </div>
 
-    <a href="https://www.codemakers.co.uk/projects/shipmate/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">CC Tutor</h2>
-      <div class="text-sm">
-        <p>
-          A compilation process visualisation platform
-          providing students with the necessary
-          tools to inspect the processes underlying
-          a compiler frontend.
-        </p>
-        <p>The API has been developed in Laravel PHP and the UI in React JS.</p>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="font-medium text-black">Multi-carrier integration platform</h2>
+        <div class="text-sm">
+          <p>
+            As a intern web developer I worked on the initial
+            API (Laravel PHP). The work consisted in providing a unified
+            API for different carriers, therefore getting in
+            touch with their respective development teams.
+          </p>
+        </div>
       </div>
+
+      <a href="https://www.codemakers.co.uk/projects/shipmate/" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
     </div>
 
-    <a href="https://cc-tutor.herokuapp.com/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">Code First: Girls</h2>
-      <div class="text-sm">
-        <p>
-          As part of the "Code First: Girls" courses
-          I volunteered to be an instructor.
-          The course covered the basics of HTML, CSS, JavaScript,
-          and version control systems.
-        </p>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="font-medium text-black">CC Tutor</h2>
+        <div class="text-sm">
+          <p>
+            A compilation process visualisation platform
+            providing students with the necessary
+            tools to inspect the processes underlying
+            a compiler frontend.
+          </p>
+          <p>The API has been developed in Laravel PHP and the UI in React JS.</p>
+        </div>
       </div>
+
+      <a href="https://cc-tutor.herokuapp.com/" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
+
     </div>
 
-    <a href="https://www.codefirstgirls.org.uk/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
-
-  </div>
-
-  <div class="card card--no-shadow">
-    <div class="py-3 px-4">
-      <h2 class="font-medium text-black">Kamil</h2>
-      <div class="text-sm">
-        <p>
-          A dependency-free JavaScript autocomplete library.
-          The library was inspired by the jQuery autocomplete
-          library and the lack of (at the time) highly customisable
-          dependency-free autocomplete libraries.
-        </p>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="font-medium text-black">Code First: Girls</h2>
+        <div class="text-sm">
+          <p>
+            As part of the "Code First: Girls" courses
+            I volunteered to be an instructor.
+            The course covered the basics of HTML, CSS, JavaScript,
+            and version control systems.
+          </p>
+        </div>
       </div>
+
+      <a href="https://www.codefirstgirls.org.uk/" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
+
     </div>
 
-    <a href="http://oss6.github.io/kamil/" target="_blank" class="card--action">
-      <p>More info</p>
-      {% include "./_includes/partials/chevron-right.njk" %}
-    </a>
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="font-medium text-black">Kamil</h2>
+        <div class="text-sm">
+          <p>
+            A dependency-free JavaScript autocomplete library.
+            The library was inspired by the jQuery autocomplete
+            library and the lack of (at the time) highly customisable
+            dependency-free autocomplete libraries.
+          </p>
+        </div>
+      </div>
+
+      <a href="http://oss6.github.io/kamil/" target="_blank" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
+    </div>
   </div>
-</div>
+</main>
