--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,11 +2,13 @@
 layout: layouts/base.njk
 ---
 
-<header class="post--header">
-  <h1 class="font-medium text-2xl">{{ title }}</h1>
-  <p class="text-grey-dark text-sm">by {{ author }} - {{ date | formattedDate }}</p>
-</header>
+<main>
+  <div class="content-header">
+    <h1 class="content-header__title">{{ title }}</h1>
+    <h2 class="content-header__subtitle">by {{ author }} - {{ date | formattedDate }}</h2>
+  </div>
 
-<section class="post--content">
-  {{ content | safe }}
-</section>
+  <article>
+    {{ content | safe }}
+  </article>
+</main>
