--- a/_includes/partials/github-logo.njk
+++ b/_includes/partials/github-logo.njk
@@ -1,4 +1,4 @@
-<svg class="fill-current text-teal-700 w-8 h-8" viewBox="0 0 438.549 438.549"
+<svg class="fill-current text-amber-700 w-8 h-8" viewBox="0 0 438.549 438.549"
   style="enable-background:new 0 0 438.549 438.549;" xml:space="preserve">
   <g>
     <path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365
