--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -2,4 +2,5 @@
   <a href="/">Home</a>
   <a href="/work">Work</a>
   <a href="/blog">Blog</a>
+  <a href="/digital-garden">Digital garden</a>
 </nav>
