--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,6 +13,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/styles.css' | url }}">
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 
 <body>
