add lsf in digital garden + remove target blank for links

--- a/digital-garden/index.njk
+++ b/digital-garden/index.njk
@@ -11,7 +11,7 @@ title: Digital garden
     </h2>
   </div>
 
-  <p>From <a class="link" href="https://www.mentalnodes.com/a-gardening-guide-for-your-mind" target="_blank">A gardening guide for your mind</a>:</p>
+  <p>From <a class="link" href="https://www.mentalnodes.com/a-gardening-guide-for-your-mind">A gardening guide for your mind</a>:</p>
 
   <ul class="list-disc pl-8">
     <li><strong>Seeds.</strong> Seed your garden with quality content and cultivate your curiosity. Plant seeds in your mind garden by taking smart personal notes (taking raw notes is useless). These don't need to be written in a publishable form.</li>
