--- a/work.njk
+++ b/work.njk
@@ -9,8 +9,8 @@ title: Work
   </div>
 
   <p>
-    I currently work at <a class="link" href="https://www.ebi.ac.uk/" target="_blank">The European Bioinformatics Institute</a>
-    on the <a class="link" href="https://www.covid19dataportal.org/" target="_blank">COVID-19 Data Portal</a>.
+    I currently work at <a class="link" href="https://www.ebi.ac.uk/">The European Bioinformatics Institute</a>
+    on the <a class="link" href="https://www.covid19dataportal.org/">COVID-19 Data Portal</a>.
   </p>
 
   <p>
@@ -24,10 +24,49 @@ title: Work
   </p>
 
   <p>
-    Following are some of the projects I worked on:
+    Following are some of the projects I worked/am working on:
   </p>
 
   <div class="cards mt-4">
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="flex items-center justify-between font-medium text-black">
+          COVID-19 Data Portal
+        </h2>
+        <div class="text-sm">
+          <p>
+            The COVID-19 Data Portal (<a href="https://www.covid19dataportal.org">https://www.covid19dataportal.org</a>) was first released as part of
+            the European COVID-19 Data Platform, on April 20th 2020 to facilitate rapid and open data
+            sharing and analysis, to accelerate global SARS-CoV-2 and COVID-19 research.
+          </p>
+        </div>
+      </div>
+
+      <a href="https://academic.oup.com/nar/advance-article/doi/10.1093/nar/gkab417/6287847" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
+    </div>
+
+    <div class="card card--no-shadow">
+      <div class="py-3 px-4">
+        <h2 class="flex items-center justify-between font-medium text-black">
+          EBI Search
+        </h2>
+        <div class="text-sm">
+          <p>
+            EBI Search is a scalable text search engine that provides easy and uniform access to the biological
+            data resources hosted at the European Bioinformatics Institute (EMBL-EBI).
+          </p>
+        </div>
+      </div>
+
+      <a href="https://www.ebi.ac.uk/ebisearch/overview.ebi/about" class="card--action">
+        <p>More info</p>
+        {% include "./_includes/partials/chevron-right.njk" %}
+      </a>
+    </div>
+
     <div class="card card--no-shadow">
       <div class="py-3 px-4">
         <h2 class="flex items-center justify-between font-medium text-black">
@@ -36,12 +75,12 @@ title: Work
         <div class="text-sm">
           <p>
             ESLint plugin for Angular. This plugin contains
-            checks that are not present in <a class="link" href="https://github.com/angular-eslint/angular-eslint" target="_blank">angular-eslint</a>
+            checks that are not present in <a class="link" href="https://github.com/angular-eslint/angular-eslint">angular-eslint</a>
           </p>
         </div>
       </div>
 
-      <a href="https://github.com/oss6/eslint-plugin-ng-extra" target="_blank" class="card--action">
+      <a href="https://github.com/oss6/eslint-plugin-ng-extra" class="card--action">
         <p>More info</p>
         {% include "./_includes/partials/chevron-right.njk" %}
       </a>
@@ -54,14 +93,14 @@ title: Work
         </h2>
         <div class="text-sm">
           <p>
-            Service discovery tool for the <a href="https://github.com/visual-framework/vf-core" target="_blank">vf-core</a>,
+            Service discovery tool for the <a href="https://github.com/visual-framework/vf-core">vf-core</a>,
             which is a (primarily CSS) framework that targets needs of life science websites and services
-            (e.g. <a href="https://www.embl.org/" target="_blank">European Molecular Biology Laboratory</a>).
+            (e.g. <a href="https://www.embl.org/">European Molecular Biology Laboratory</a>).
           </p>
         </div>
       </div>
 
-      <a href="https://github.com/oss6/vf-core-service-discovery" target="_blank" class="card--action">
+      <a href="https://github.com/oss6/vf-core-service-discovery" class="card--action">
         <p>More info</p>
         {% include "./_includes/partials/chevron-right.njk" %}
       </a>
@@ -81,44 +120,7 @@ title: Work
         </div>
       </div>
 
-      <a href="https://houseofthobes.co.uk/" target="_blank" class="card--action">
-        <p>More info</p>
-        {% include "./_includes/partials/chevron-right.njk" %}
-      </a>
-    </div>
-
-    <div class="card card--no-shadow">
-      <div class="py-3 px-4">
-        <h2 class="font-medium text-black">Mini Mission School</h2>
-        <div class="text-sm">
-          <p>
-            A website for the Mini Mission Arabic and Islamic education school.
-            The client wanted a simple and "playful" look and feel for the website
-            with a registration feature.
-          </p>
-        </div>
-      </div>
-
-      <a href="https://minimission.co.uk/" target="_blank" class="card--action">
-        <p>More info</p>
-        {% include "./_includes/partials/chevron-right.njk" %}
-      </a>
-    </div>
-
-    <div class="card card--no-shadow">
-      <div class="py-3 px-4">
-        <h2 class="font-medium text-black">Multi-carrier integration platform</h2>
-        <div class="text-sm">
-          <p>
-            As a intern web developer I worked on the initial
-            API (Laravel PHP). The work consisted in providing a unified
-            API for different carriers, therefore getting in
-            touch with their respective development teams.
-          </p>
-        </div>
-      </div>
-
-      <a href="https://www.codemakers.co.uk/projects/shipmate/" target="_blank" class="card--action">
+      <a href="https://houseofthobes.co.uk/" class="card--action">
         <p>More info</p>
         {% include "./_includes/partials/chevron-right.njk" %}
       </a>
@@ -138,7 +140,7 @@ title: Work
         </div>
       </div>
 
-      <a href="https://cc-tutor.herokuapp.com/" target="_blank" class="card--action">
+      <a href="https://cc-tutor.herokuapp.com/" class="card--action">
         <p>More info</p>
         {% include "./_includes/partials/chevron-right.njk" %}
       </a>
@@ -158,7 +160,7 @@ title: Work
         </div>
       </div>
 
-      <a href="https://www.codefirstgirls.org.uk/" target="_blank" class="card--action">
+      <a href="https://www.codefirstgirls.org.uk/" class="card--action">
         <p>More info</p>
         {% include "./_includes/partials/chevron-right.njk" %}
       </a>
@@ -178,7 +180,7 @@ title: Work
         </div>
       </div>
 
-      <a href="http://oss6.github.io/kamil/" target="_blank" class="card--action">
+      <a href="http://oss6.github.io/kamil/" class="card--action">
         <p>More info</p>
         {% include "./_includes/partials/chevron-right.njk" %}
       </a>
