--- a/index.njk
+++ b/index.njk
@@ -21,7 +21,14 @@ title: Home
 </p>
 
 <section>
-  <h1 class="text-2xl font-medium text-amber-800 mb-4">Recent posts</h1>
+  <h1 class="text-2xl font-medium text-amber-800 mb-4">
+    <a href="/blog" class="flex items-center">
+      <span>Recent posts</span>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 ml-1" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+      </svg>
+    </a>
+  </h1>
   {% set postslist = collections.post | head(4) %}
   {% include "./_includes/partials/postslist.njk" %}
   </div>
